# rust-lab-life

life-cpp/: CMakeLists.txt  board.cpp  board.h  build-ffi-cpp-in-rust.sh  build-ffi-rust-in-cpp.sh  display.h  ffi-export.cpp  ffi-import.h  main.cpp
life-rs/: Cargo.toml  build.rs
life-rs/examples/: glider.rs
life-rs/src/: board.rs  display.rs  ffi_export.rs  ffi_import.rs  lib.rs  traits.rs  wasm.rs
www/: index.html  index.js  package-lock.json  package.json
