[package]
name = "life-rs"
version = "0.1.0"
authors = ["Grzegorz Nosek <root@localdomain.pl>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ffi_import = []
ffi_export = []

default = ["ffi_export"]

[dependencies]
itertools = "*"
