[package]
name = "life-rs"
version = "0.1.0"
authors = ["Grzegorz Nosek <root@localdomain.pl>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ffi_import = []
ffi_export = []
wasm = ["console_error_panic_hook", "wasm-bindgen"]

default = ["ffi_export"]

[dependencies]
itertools = "*"
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
